# ml

./: .gitmodules
nn/: CMakeLists.txt
nn/bind/src/: binding.cpp
nn/bind/test/: index.html  operations.js
nn/common/: OperationsUtils.cpp  Utils.cpp
nn/common/include/: ActivationFunctor.h  Utils.h
